--- a/app/views/blocks/_show.html.haml
+++ b/app/views/blocks/_show.html.haml
@@ -1,7 +1,7 @@
 = link_to edit_block_path(@block), class: "block-link", remote: true, data: {toggle: "modal", target: "#myModal"} do
   .row.title
     .col-xs-12
-      %h2= @block.formatted_title
+      %h2= render "blocks/title"
   .row.keypoints
     .col-xs-10.col-xs-offset-1.points
       %ul
@@ -10,4 +10,4 @@
             %li= point.content
   .row.takeaway
     .col-xs-10.col-xs-offset-1.text
-      %h4= @block.takeaway
+      %h4= render "blocks/takeaway"
