--- a/app/views/canvases/_title.html.haml
+++ b/app/views/canvases/_title.html.haml
@@ -1,1 +1,1 @@
-%h1.editable{data:{controller: 'canvases', object_id: @canvas.id, action: 'edit', attribute: 'title'}}= @canvas.formatted_title
+%h1.editable{data:{url: 'canvases/' + @canvas.id.to_s + '/edit'}}= @canvas.formatted_title
