--- a/app/views/blocks/_form.html.haml
+++ b/app/views/blocks/_form.html.haml
@@ -1,2 +1,2 @@
 = form_for @block, remote: true, html:{class: "xhr-editting"} do |f|
-  = f.text_field @attr, autofocus: true, placeholder: "Inserir #{@attr}"
+  = f.text_field @attr, autofocus: true, placeholder: "#{placeholder_for_attr}"
